--- a/STYLE/style.css
+++ b/STYLE/style.css
@@ -230,7 +230,7 @@ main  .bar-conatac-mobil{
 /* IMAGEN PRINCIPAL */
 
 main .content-img{
-    background-image: url(../IMAGENES/photo\ desktop.png);
+    background-image: url(../IMAGENES/foto-canty.png);
     background-size: cover;
     margin-top: 20px;
 }
@@ -249,7 +249,7 @@ main .content-img{
         width: 65%;
         height: 320px;
         margin: 0 auto;
-        background-image: url(../IMAGENES/photo\ desktop.png);
+        background-image: url(../IMAGENES/foto-canty.png);
         background-size: cover;
         background-color: #8e7bef;
         margin-bottom: 25px;
